Your commit message here

--- a/consumer-dashboard.html
+++ b/consumer-dashboard.html
@@ -388,9 +388,11 @@
       <div class="brand">AgroConnect</div>
       <nav class="nav-list">
         <div class="nav-section">
-          <a class="active" href="#"><i class="fas fa-chart-line"></i> Dashboard</a>
-          <a href="#"><i class="fas fa-carrot"></i> Browse Products</a>
-          <a href="#"><i class="fas fa-receipt"></i> My Orders</a>
+          <a class="active" href="consumer-dashboard.html"><i class="fas fa-chart-line"></i> Dashboard</a>
+          <a href="consumer-dashboard.html"><i class="fas fa-carrot"></i> Browse Products</a>
+          <a href="consumer-cart.html"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
+          <a href="consumer-orders.html"><i class="fas fa-receipt"></i> My Orders</a>
+          <a href="consumer-profile.html"><i class="fas fa-user"></i> Profile</a>
           <a href="#"><i class="fas fa-comments"></i> Messages</a>
         </div>
       </nav>
