--- a/farmer-dashboard.html
+++ b/farmer-dashboard.html
@@ -581,7 +581,8 @@
       <ul>
         <li><a href="farmer-dashboard.html" class="active">Dashboard</a></li>
         <li><a href="farmer-products-page.html">My Products</a></li>
-        <li><a href="#">Orders</a></li>
+        <li><a href="farmer-orders.html">Orders</a></li>
+        <li><a href="farmer-profile.html">Profile</a></li>
         <li><a href="#">Market Insights</a></li>
         <li><a href="#">Messages</a></li>
       </ul>
