--- a/supplier-dashboard.html
+++ b/supplier-dashboard.html
@@ -381,9 +381,10 @@
     <div>
       <div class="sidebar-brand">AgroConnect</div>
       <ul class="sidebar-nav">
-        <li><a href="#" class="active"><i class="fas fa-th-large"></i> Dashboard</a></li>
-        <li><a href="#"><i class="fas fa-seedling"></i> My Products</a></li>
-        <li><a href="#"><i class="fas fa-receipt"></i> Orders</a></li>
+        <li><a href="supplier-dashboard.html" class="active"><i class="fas fa-th-large"></i> Dashboard</a></li>
+        <li><a href="supplier-inventory.html"><i class="fas fa-boxes"></i> Inventory</a></li>
+        <li><a href="supplier-orders.html"><i class="fas fa-receipt"></i> Orders</a></li>
+        <li><a href="supplier-profile.html"><i class="fas fa-user"></i> Profile</a></li>
         <li><a href="#"><i class="fas fa-comments"></i> Messages</a></li>
       </ul>
     </div>
